# forgingapps-website

./: .env.example  .gitignore  CONTENT-MANUAL.md  DEPLOYMENT.md  DEV-INDEX.md  INDEX.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/chat-intake/: .gitignore  CHANGELOG.md  HANDOFF-design-productize.md  HANDOFF.md  PLAN.md  README.md  TODO-brief-endpoint.md  TODO-n8n-brief-sync.md  pyproject.toml
services/chat-intake/app/: brief_bootstrap.py  db.py  main.py  prompt_stack.py  services.py  tags.py
services/chat-intake/app/llm/: __init__.py  codex.py
services/chat-intake/app/routes/: briefs.py  chat.py  health.py
services/chat-intake/design/: IMPLEMENTATION_PROMPT.md  post-contact-chat.html
services/chat-intake/prompts/: brief_generation.md  cinder_finalize.md  cinder_persona.md  email_to_team.md  locale_switch.md  style-guide.md  summarization.md
services/chat-intake/prompts/brief_templates/: ai-chat-assistant.md  ai-readiness.md  anvil.md  blaze.md  discovery-workshop.md  ember.md  forge.md  generic.md  hearthstone.md  oracle.md  spark.md
services/chat-intake/prompts/system/: ai-chat-assistant.md  ai-readiness.md  anvil.md  blaze.md  discovery-workshop.md  (+6 more)
services/chat-intake/scripts/: chat-intake-sweep.service  chat-intake-sweep.timer  chat-intake.service  run-dev.sh
services/chat-intake/tests/: test_brief_endpoint.py  test_brief_ingest.py  test_chat.py  test_finalize.py  test_health.py  test_sweeper.py
services/chat-intake/tools/: bootstrap_brief.py  cinder_tester.py  sweep_inactive.py
(+204 files in other folders)
